# Broski

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  broskifile  dumper.sh  install.sh  pleasefile
.github/workflows/: ci.yml  docs-ci.yml  docs-deploy.yml  release.yml
crates/broski-cache/src/: lib.rs
crates/broski-cli/: Cargo.toml
crates/broski-cli/src/: main.rs
crates/broski-core/: Cargo.toml
crates/broski-core/benches/: core_bench.rs
crates/broski-core/src/: cancel.rs  executor.rs  fingerprint.rs  lib.rs  model.rs  parser_winnow.rs  validator.rs
crates/broski-store/src/: lib.rs
crates/broski-tui/: Cargo.toml
crates/broski-tui/src/: app.rs  keys.rs  launcher.rs  lib.rs  state.rs  theme.rs
crates/broski-tui/src/widgets/: dag.rs  help.rs  launcher.rs  logs.rs  mod.rs  slash.rs  stats.rs  summary.rs
crates/broski-tui/tests/: integration_state.rs
crates/please-cache/src/: lib.rs
crates/please-cli/: Cargo.toml
crates/please-cli/src/: main.rs
crates/please-cli/tests/: e2e.rs  e2e_acid.rs  e2e_cache.rs  e2e_doctor.rs  e2e_explain.rs  e2e_graph.rs
crates/please-core/src/: config.rs  executor.rs  (+4 more)
docs/: README.md  migration.md  release-runbook.md  release-v0.2.md  release-v0.3.md
examples/basic/: pleasefile
examples/minimal/: pleasefile
examples/polyglot/: pleasefile
examples/showcase/: Dockerfile  README.md  pleasefile
examples/showcase/backend/: Cargo.toml
examples/showcase/backend/src/: main.rs
website/: docusaurus.config.ts  sidebars.ts  vercel.json
website/blog/: README.md
website/docs/: index.md
(+39 files in other folders)
